# fieldpilot-urdf

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  diagnostics-guide.md  generate_illustrations.py  tutorial.md
examples/: closed_loop_sim.py  diagnostics_workflow.py  ducky_diagnosis.py  full_stack_tour.py
src/fieldpilot_urdf/: __init__.py  _dyn_adapter.py  cartesian.py  case_base.py  collisions.py  constrained.py  dashboard.py  diagnose_core.py  diagnostics.py  differential_diagnosis.py  digest.py  dynamics.py  embedding.py  fault_propagation.py  faults.py  fk.py  graph.py  ik.py  importer.py  intervention.py  kinematic_diagnosis.py  kinematics.py  loader.py  loops.py  mesh.py  mesh_primitives.py  models.py  planning.py  repair.py  report.py  retime.py  sim.py  simulate.py  spare_parts.py  storage.py  telegram.py  trajectory.py  viz.py
src/fieldpilot_urdf/graphrag/: __init__.py  backend.py  launcher.py  neo4j_backend.py  rag.py  schemas.py  server.py  store.py
tests/: .gitkeep  test_calibration.py  test_cartesian.py  test_case_base.py  test_constrained.py  test_dashboard.py  test_diagnose_core.py  test_differential_diagnosis.py  test_digest.py  test_dynamics.py  test_embedding.py  test_example_diagnostics.py  test_fault_diagnosis.py  test_fault_propagation.py  test_fk.py  test_graph.py  test_graph_backend_parity.py  test_graphrag.py  test_ik.py  test_ik_collision_free.py  test_import_local.py  test_importer.py  test_intervention.py  test_kinematic_diagnosis.py  test_kinematics.py  test_loops.py  test_mesh_collisions.py  test_mesh_formats.py  test_mesh_primitives.py  test_motion_viz.py  test_obstacles.py  test_planning.py  test_repair.py  test_report.py  test_retime.py  test_scope_viz.py  test_server.py  test_sim.py  test_simulate.py  test_spare_parts.py  (+5 more)
